Fix chat text hidden under input

--- a/src/app/modules/ecommerce/pages/chat-room/chat-room.component.scss
+++ b/src/app/modules/ecommerce/pages/chat-room/chat-room.component.scss
@@ -204,7 +204,7 @@ main {
   background-color: #181d17;
   min-height: 100%;
   padding: 0px 24px;
-  padding-bottom: 95px;
+  padding-bottom: 128px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
